--- a/package.yml
+++ b/package.yml
@@ -1,5 +1,5 @@
 package: pushi_it
-version: '1.0.0'
+version: '1.0.0-alpha1'
 author: 'Thomas Skerbis, Friends Of REDAXO'
 supportpage: 'https://github.com/FriendsOfREDAXO/pushi_it'
 title: 'PushIt - Web Push Notifications'
