Fix: Rename pushi_it to push_it everywhere
- Package name: push_it (matching GitHub repository)
- All file references updated: pushi_it -> push_it
- Database tables renamed: rex_pushi_it_* -> rex_push_it_*
- Permissions updated: pushi_it[] -> push_it[]
- API endpoints: pushi_it_* -> push_it_*
- URL references corrected
- Added update.php for smooth migration from old naming

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "friendsofredaxo/pushi_it",
+  "name": "friendsofredaxo/push_it",
   "description": "Web Push Notifications für REDAXO 5 - Frontend und Backend",
   "type": "redaxo-addon",
   "license": "MIT",
@@ -13,7 +13,7 @@
       "homepage": "https://github.com/FriendsOfREDAXO"
     }
   ],
-  "homepage": "https://github.com/FriendsOfREDAXO/pushi_it",
+  "homepage": "https://github.com/FriendsOfREDAXO/push_it",
   "require": {
     "php": "^8.0",
     "minishlink/web-push": "^9.0"
