--- a/package.yml
+++ b/package.yml
@@ -1,7 +1,7 @@
-package: pushi_it
+package: push_it
 version: '1.0.0'
 author: 'Thomas Skerbis, Friends Of REDAXO'
-supportpage: 'https://github.com/FriendsOfREDAXO/pushi_it'
+supportpage: 'https://github.com/FriendsOfREDAXO/push_it'
 title: 'PushIt - Web Push Notifications'
 description: 'Web Push Notifications für Frontend und Backend'
 
@@ -12,7 +12,7 @@ requires:
 
 page:
     title: 'PushIt'
-    perm: pushi_it[]
+    perm: push_it[]
     icon: rex-icon fa-bell
     subpages:
         settings:
@@ -20,22 +20,22 @@ page:
             perm: admin
         subscriptions:
             title: 'Subscriptions'
-            perm: pushi_it[]
+            perm: push_it[]
         send:
             title: 'Senden'
-            perm: pushi_it[]
+            perm: push_it[]
         history:
             title: 'Verlauf'
-            perm: pushi_it[]
+            perm: push_it[]
         backend_notify:
             title: 'Backend Benachrichtigungen'
-            perm: pushi_it[]
+            perm: push_it[]
         help:
             title: 'Hilfe'
             icon: rex-icon fa-question-circle
             subPath: README.md
             itemClass: 'pull-right'
-            perm: pushi_it[]
+            perm: push_it[]
 
 default_config:
     subject: 'mailto:info@example.com'
